--- a/app/assets/stylesheets/prototype_19.scss
+++ b/app/assets/stylesheets/prototype_19.scss
@@ -708,6 +708,9 @@ header {
               div:nth-of-type(4) {
                 background-image: url(ribbon-option-snake.svg);
               }
+              div.active {
+                background-color: #e6e6e6;
+              }
             }
           }
           .ControlTags {
@@ -732,19 +735,6 @@ header {
               div:nth-of-type(3) {
                 background-color: #f54f59;
               }
-              // div:nth-of-type(3):before {
-              //   background: none;
-              //   border: 2px solid #1890ff;
-              //   content: '';
-              //   display: block;
-              //   position: absolute;
-              //   top: -4px;
-              //   left: -4px;
-              //   right: -4px;
-              //   bottom: -4px;
-              //   pointer-events: none;
-              //   border-radius: 16px;
-              // }
             }
             .Slider {
               width: 235px;
@@ -800,20 +790,20 @@ header {
               div:nth-of-type(2) {
                 background-image: url(shadow-option-gradient.svg);
               }
-              // div:nth-of-type(2):before {
-              //   background: none;
-              //   border: 2px solid #1890ff;
-              //   content: '';
-              //   display: block;
-              //   position: absolute;
-              //   top: -4px;
-              //   left: -4px;
-              //   right: -4px;
-              //   bottom: -4px;
-              //   pointer-events: none;
-              //   border-radius: 16px;
-              // }
             }
+          }
+          .active:before {
+            background: none;
+            border: 2px solid #1890ff;
+            content: '';
+            display: block;
+            position: absolute;
+            top: -4px;
+            left: -4px;
+            right: -4px;
+            bottom: -4px;
+            pointer-events: none;
+            border-radius: 16px;
           }
         }
         .Button {
